# finimizers-rs

./: .gitmodules  Cargo.toml  README.md
sbwt/: Cargo.toml
sbwt/src/: kmer.rs  kmer_chunk.rs  lib.rs  main.rs  sbwt.rs  subsetrank.rs  util.rs
sbwt/src/construction/: cursors.rs  dummies.rs  kmer_splitter.rs  mod.rs
src/: brute_force_finimizers.rs  main.rs  utils.rs
