[package]
name = "finimizer_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jseqio = {git = "https://github.com/jnalanko/jseqio",  rev = "d89c7240b0e4d1444f97ba198734824f830d74f3"}
sbwt = {path = "sbwt"}
clap = { version = "4.0.26", features = ["derive"] }
clap_complete = "4.0.6"
log = "0.4.0"
rand = "0.8"
env_logger = "0.10.0"
bitvec = "1.0.1"

#indicatif = "0.17.6"
#rayon = "*"
#rand_chacha = "0.3.1"
#serde = "1.0"
#serde_derive = "1.0"
#bincode = "1.3"
